tabby/tabby-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tabby
spec:
  selector:
    app: tabby
  ports:
    - name: http
      port: 8080
      targetPort: 8080
